--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="C:\Users\Moshiur-KPCL\Desktop\Website Create\portfolio\hi.docx">About Me</a>
+  <a class="navbar-brand" href="C:\Users\Moshiur-KPCL\Desktop\portfolio\hi.docx">About Me</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -50,13 +50,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="C:\Users\Moshiur-KPCL\Desktop\Website Create\portfolio\001.jpg" class="d-block w-100" alt="...">
+      <img src="C:\Users\Moshiur-KPCL\Desktop\portfolio\001.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="C:\Users\Moshiur-KPCL\Desktop\Website Create\portfolio\002.jpg" class="d-block w-100" alt="...">
+      <img src="C:\Users\Moshiur-KPCL\Desktop\portfolio\002.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="C:\Users\Moshiur-KPCL\Desktop\Website Create\portfolio\003.jpg" class="d-block w-100" alt="...">
+      <img src="C:\Users\Moshiur-KPCL\Desktop\portfolio\003.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -85,7 +85,7 @@
 <div class="container">
  <div class="card-deck">
   <div class="card">
-    <img src="C:\Users\Moshiur-KPCL\Desktop\Website Create\portfolio\lough1.jpg" class="card-img-top" alt="...">
+    <img src="C:\Users\Moshiur-KPCL\Desktop\portfolio\lough1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Photoshop</h5>
       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -93,7 +93,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="C:\Users\Moshiur-KPCL\Desktop\Website Create\portfolio\lough2.jpg" class="card-img-top" alt="...">
+    <img src="C:\Users\Moshiur-KPCL\Desktop\portfolio\lough2.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Illustrator</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -101,7 +101,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="C:\Users\Moshiur-KPCL\Desktop\Website Create\portfolio\vut2.jpg" class="card-img-top" alt="...">
+    <img src="C:\Users\Moshiur-KPCL\Desktop\portfolio\vut2.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Cartoon</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -131,9 +131,7 @@
 </div>
 </div>
 
-    <h1>Hello, world!</h1>
-
-    <!-- Optional JavaScript -->
+     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
